tests/paczka2/big_fuzzy/45311312.err
Error in line 1: d19 A625 41,9
Error in line 4: S962 S962 79,6
Error in line 23: aFvEMx19aE S716 81,3
Error in line 37: r0D95 A232 44,5
Error in line 46: r0D95 S716 88,6
Error in line 55: plp8biS3UNI S716 48,7
Error in line 52: S962 S962 8,5
Error in line 60: S962 A625 62,8
Error in line 56: r0D95 A625 262,5
Error in line 76: Tsnjsies4BG S962 90,4
Error in line 82: Tsnjsies4BG S716 31,1
Error in line 85: plp8biS3UNI S962 89,5
Error in line 86: S962 S962 43,9
Error in line 73: aFvEMx19aE A625 209,5
Error in line 96: plp8biS3UNI A625 118,1
Error in line 107: plp8biS3UNI S716 42,6
Error in line 95: r0D95 S716 53,9
Error in line 118: r0D95 S962 47,9
Error in line 106: d19 A232 42,6
Error in line 97: Tsnjsies4BG S962 76,9
Error in line 122: Tsnjsies4BG S716 92,1
Error in line 119: r0D95 S716 39,7
Error in line 116: S962 S716 5,4
Error in line 141: Tsnjsies4BG A232 25,4
Error in line 148: r0D95 A625 77,1
Error in line 149: d19 A232 0,1
Error in line 152: plp8biS3UNI A625 58,1
Error in line 163: d19 A625 -1,5
Error in line 164: plp8biS3UNI A625 76,84
Error in line 155: d19 A625 13,2
Error in line 161: plp8biS3UNI S962 60,9
Error in line 165: 3MH A232 16,2
Error in line 172: 3MH S716 38,4
Error in line 173: 3MH S962 77,2
Error in line 182: r0D95 A232 7,3
Error in line 189: S962 S962 132,1
Error in line 199: S962 S7P6 86,2
Error in line 183: d19 S716 83,8
Error in line 193: plp8biS3UNI S716 18,6
Error in line 207: aFvEMx19aE S962 97,00
Error in line 219: aFvEMx19aE S962 367,6
Error in line 223: Tsnjsies4BG S962 25,7
Error in line 215: S962 S716 175,8
Error in line 234: r0D95 A625 21,8
Error in line 235: r0D95 S716 2,9
Error in line 237: Tsnjsies4BG S716 21,5
